--- a/simple-express-jest/package.json
+++ b/simple-express-jest/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest ",
+    "test:unit": "jest --detectOpenHandles --forceExit tests/unit",
+    "test:integration": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit tests/integration",
     "start": "nodemon index.js"
   },
   "keywords": [],
@@ -17,8 +19,10 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^30.0.1",
     "nodemon": "^3.1.10",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.1.1"
   }
 }
